--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <td><img src="images/ice.png" alt="Ishwarya Profile Picture" /></td>
         <td>
           <h1> Ishwarya </h1>
-          <p> <em> Aspiring Developer in <strong> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3115284/">Mind and Soul </a></strong>.</em> </p>
+          <p> <em> Aspiring Developer and <strong> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3115284/"> Hardworker! </a></strong>.</em> </p>
           <p> I am a Full Stack Engineer, specializing in Java. I can take up any role and learn new things!</p>
         </td>
       </tr>
